@@ -9,7 +9,6 @@ Sphinx
 - option for compact module index
 - HTML section numbers?
 - split the general index?
-- add OpenSearch
 - "seealso" links to external examples, see http://svn.python.org/projects/sandbox/trunk/seealso/ and http://effbot.org/zone/idea-seealso.htm
 - "often used" combo box in sidebar
 - source file cross-references?
